# xschem-gaw

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  README.md  aclocal.m4  config.h.in  configure  configure.ac  gaw.desktop
contrib/: gaw3.spec  mkcf-20170712.tar.xz
contrib/voidlinux/: Readme
contrib/voidlinux/srcpkgs/gaw3/: template
doc/: Compiled  Readme.stest  Sizing  config  dataModel  globaltable.sch  lmswtable.sch  lmtable.sch  objects  paneltable.sch  sound  ttg
examples/: Cazm.B  Hspicea.tr0  Hspiceb.tr0  Hspiceb1.tr0  S2raw.rawspice  Spice3a.raw  Spice3b.raw  filter2k.asc  invsweep.tr0  myfile  tm.tr0  tran.tr0  tran_sweep.tr0  xbuf646.raw
lib/: Makefile.am  Makefile.in  appclass.c  array.c  array.h  arraystr.c  arraystr.h  arraystruct.c  arraystruct.h  bswap.h  dataset.c  dataset.h  datestrconv.c  datestrconv.h  dbuf.c  dbuf.h  dlist.c  dlist.h  dliststr.c  dliststr.h  fdbuf.c  fdbuf.h  fdsel.c  fdsel.h  fileformat.c  fileformat.h  fileutil.c  fileutil.h  fsutil.c  fsutil.h  incvar.c  incvar.h  sndparams.c  sndparams.h  sndstream.c  sndstream.h  sockcon.c  sockcon.h  spicestream.c  spicestream.h  (+21 more)
po/: Makefile.in.in  POTFILES.in  fr.gmo  fr.po  gaw3.pot
src/: Makefile.am  Makefile.in  datafile.c  datafile.h  gaw-gtkrc  gaw-gtkrc.css  gaw.h  gawabout.c  gawapp.c  gawcolor.c  gawcursor.c  gawcursor.h  gawda.c  gawda.h  gawdnd.c  gawdnd.h  gawdraw.c  gawdraw.h  gawfile.c  gawgrip.c  gawgrip.h  gawhelp.c  gawimg.c  gawio.c  gawlabel.c  gawlabel.h  gawmain.c  gawmenus.c  gawmenus.h  gawmisc.c  gawmisc.h  gawpanel.c  gawpanel.h  gawpixmaps.h  gawsnd.c  gawsnd.h  gawtext.c  gawtext.h  gawutil.c  gawutil.h  (+5 more)
ttg/: Ascii  Makefile  Readme  appclass.h  appmem.c  appmem.h  dbuf.c  dbuf.h  duprintf.c  duprintf.h  hqdata  hqimg  main.c  msglog.c  msglog.h  myfile  pttg  sockcon.c  strmem.c  strmem.h
